# decompress-json-etl

./: .gitignore  README-ptBR.md  README.md  generate_json.py  notes.md  process_json.py  pyproject.toml  spark.py
scala_udf/: build.sbt
scala_udf/.bsp/: sbt.json
scala_udf/src/main/scala/: Decompress.scala
