[project]
name = "decompress-json-etl"
version = "0.1.0"
description = "A Python-based ETL pipeline for processing compressed JSON data into structured Iceberg tables."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=33.1.0",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "pyspark>=3.5.3",
    "unidecode>=1.3.8",
]
